--- a/app/index.html
+++ b/app/index.html
@@ -25,40 +25,41 @@
   </header>
   <main>
     <aside class="genre--listing" role="complementary">
-      <h3 id="genre-label">Current Genres</h3>
+      <h3 id="genre-label">Genres Filter</h3>
       <ul id="genres" class="genre tags" aria-labelledby="genre-label"></ul>
+      <button class="genre_filter--trigger">Filter Movies</button>
     </aside>
     <aside role="slider">
-      <h3 id="rating-label">Current Ratings</h3>
-      <input type="range" name="movieRating" id="ratingSlider" min="0" max="100" value="3" step="5" list="tickmarks" aria-labelledby="rating-label">
-
+      <h3 id="rating-label">Rating Filter</h3>
+      <input type="range" name="movieRating" id="ratingSlider" min="0" max="10" value="3" step="0.5" list="tickmarks" aria-labelledby="rating-label">
       <datalist id="tickmarks">
         <option value="0" label="0">
-        <option value="5">
-        <option value="10">
-        <option value="15">
-        <option value="20">
-        <option value="25">
-        <option value="30">
-        <option value="35">
-        <option value="40">
-        <option value="45">
-        <option value="50" label="5">
-        <option value="55">
-        <option value="60">
-        <option value="65">
-        <option value="70">
-        <option value="75">
-        <option value="80">
-        <option value="85">
-        <option value="90">
-        <option value="95">
-        <option value="100" label="10">
+        <option value="0.5">
+        <option value="1.0">
+        <option value="1.5">
+        <option value="2.0">
+        <option value="2.5">
+        <option value="3.0">
+        <option value="3.5">
+        <option value="4.0">
+        <option value="4.5">
+        <option value="5.0" label="5">
+        <option value="5.5">
+        <option value="6.0">
+        <option value="6.5">
+        <option value="7.0">
+        <option value="7.5">
+        <option value="8.0">
+        <option value="8.5">
+        <option value="9.0">
+        <option value="9.5">
+        <option value="10.0" label="10">
       </datalist>
+
+      <p class="current-rating">Current Rating: <span>3</span></p>
+
     </aside>
     <section id="cinema" class="movieListing" role="region"></section>
-
-
     </main>
 
     <footer>
